src/test/ui/consts/miri_unleashed/mutable_const.stderr
warning: skipping const checks
  --> $DIR/mutable_const.rs:9:38
   |
LL | const MUTABLE_BEHIND_RAW: *mut i32 = &UnsafeCell::new(42) as *const _ as *mut _;
   |                                      ^^^^^^^^^^^^^^^^^^^^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/mutable_const.rs:15:9
   |
LL |         *MUTABLE_BEHIND_RAW = 99
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0019`.
